# curricu-loom

./: .gitignore  README.md  generate.py  pyproject.toml
cv_generator/: __init__.py  generator.py
cv_generator/templates/: cv.html  style.css
data/: cv.yaml
